# ParallelProgrammingCoursework

./: CMakeLists.txt  Known input and output.txt  distributedMemory.c  linux.c  old-from-balena.c  runtest.batch  runtest.slurm  serial.c  sharedMemory.c  test.c  testArray.txt  testArray200by200.txt  testArray300by300.txt  testArray400by400.txt  testArrayKnown.txt  testArrayLarge200by200.txt  testForDistributed.txt
